--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <div class="content">
           <div class="quote-area">
             <i class="fa fa-quote-left"></i>
-            <p class="quote">Never give up because you never know if the next try is going to be worth all.</p>
+            <p class="quote">
+              Never give up because you never know if the next try is going to
+              be worth all.
+            </p>
             <i class="fa fa-quote-right"></i>
           </div>
 
@@ -27,29 +30,31 @@
         </div>
 
         <div class="clicks">
-          
           <div class="socials">
-
             <ul class="social-list">
-              <li class="social-link">
+              <li class="social-link facebook">
                 <a href="#" class="icons"> <i class="fab fa-facebook"></i></a>
               </li>
 
-              <li class="social-link">
-                <a href="#" class="icons"> <i class="fa-brands fa-twitter"></i></a>
+              <li class="social-link twitter">
+                <a href="#" class="icons">
+                  <i class="fa-brands fa-twitter"></i
+                ></a>
               </li>
 
-              <li class="social-link">
-                <a href="#" class="icons"> <i class="fa-brands fa-instagram"></i></a>
+              <li class="social-link instagram">
+                <a href="#" class="icons">
+                  <i class="fa-brands fa-instagram"></i
+                ></a>
               </li>
             </ul>
 
             <ul class="social-list">
-              <li class="social-link">
+              <li class="social-link sound">
                 <i class="fas fa-volume-up fa-2x icons"></i>
               </li>
 
-              <li class="social-link">
+              <li class="social-link copy">
                 <i class="fas fa-copy icons"></i>
               </li>
             </ul>
@@ -57,7 +62,6 @@
             <button>New Quote</button>
           </div>
         </div>
-
       </div>
     </div>
 
